smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/traits-on-metadata.smithy
// Parse error at line 5, column 1 near `metadata`: Traits cannot be applied to a `metadata` definition
namespace com.foo

@deprecated
metadata foo = bar
